add access denied view

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "notFound": "not found",
+  "accessdenied": "access denied",
   "backHome": "back to home",
   "title": "quiz",
   "subtitle": "countries",
