--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,5 +1,6 @@
 {
   "notFound": "nie znaleziono",
+  "accessdenied": "brak dostępu",
   "backHome": "wrócić do domu",
   "title": "quiz",
   "subtitle": "countries",
