--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -33,7 +33,7 @@
   "mode": {
     "capital": " jest stolicą:",
     "subregion": " znajduje się w:",
-    "area": " ma powierzchnię: (w km²)",
+    "area": " ma powierzchnię (w km²):",
     "population": " ma populacje:"
   },
   "difficulties": {
